--- a/api/register_api.yml
+++ b/api/register_api.yml
@@ -15,7 +15,7 @@ request:
       a: dorun
 
     data:
-      username: $uname
+      username: $username
       password: $password
       repassword: $repassword
       email: $email
